--- a/GRP_Bus_Server/build.gradle
+++ b/GRP_Bus_Server/build.gradle
@@ -41,6 +41,14 @@ dependencies {
 	//Mapper
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 
+	//Web
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.webjars:webjars-locator-core'
+	implementation 'org.webjars:sockjs-client:1.0.2'
+	implementation 'org.webjars:stomp-websocket:2.3.3'
+	implementation 'org.webjars:bootstrap:3.3.7'
+	implementation 'org.webjars:jquery:3.1.1-1'
+
 }
 
 tasks.named('test') {
