--- a/react-native-ble-advertiser/example/package.json
+++ b/react-native-ble-advertiser/example/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@realm/react": "^0.6.1",
+    "axios": "^1.6.1",
     "immutability-helper": "^3.1.1",
-    "react": "18.1.0",
-    "react-native": "0.70.1",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
     "react-native-ble-advertiser": "file:../react-native-ble-advertiser-0.0.16.tgz",
-    "react-native-uuid-generator": "^6.1.1"
+    "react-native-uuid-generator": "^6.1.1",
+    "realm": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
