add ws endpoints

--- a/GRP_Bus_Server/docker-compose.yml
+++ b/GRP_Bus_Server/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     depends_on:
       - grp-bus-db
     environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://grp-bus-db:5432/grp-bus-db
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_PROFILES_ACTIVE: local
 
