--- a/GRP_Bus_Server/build.gradle
+++ b/GRP_Bus_Server/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 
 	//Database
 	implementation 'org.liquibase:liquibase-core'
