add submit alert logic

--- a/GRP_Kiosk/ios/Podfile
+++ b/GRP_Kiosk/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
-target 'BLEAdvertiserExample' do
+target 'BusKiosk' do
   pod 'react-native-ble-advertiser', :path => '../node_modules/react-native-ble-advertiser/ios'
   config = use_native_modules!
 
@@ -20,7 +20,7 @@ target 'BLEAdvertiserExample' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'BLEAdvertiserExampleTests' do
+  target 'BusKioskTests' do
     inherit! :complete
     # Pods for testing
   end
