--- a/GRP_Kiosk/package.json
+++ b/GRP_Kiosk/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@realm/react": "^0.6.1",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.1",
+    "fast-text-encoding": "^1.0.6",
     "immutability-helper": "^3.1.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-ble-advertiser": "file:../react-native-ble-advertiser-0.0.16.tgz",
     "react-native-uuid-generator": "^6.1.1",
-    "realm": "^12.3.0"
+    "realm": "^12.3.0",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
