--- a/GRP_Mobile/package.json
+++ b/GRP_Mobile/package.json
@@ -11,24 +11,28 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.1.9",
     "@realm/react": "^0.6.1",
     "@stomp/stompjs": "^7.0.0",
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
     "fast-text-encoding": "^1.0.6",
     "immutability-helper": "^3.1.1",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-ble-advertiser": "^0.0.17",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal-loader": "^1.3.0",
     "react-native-onboard": "^2.6.0",
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-ui-lib": "^7.10.0",
     "react-native-uuid-generator": "^6.1.1",
     "react-navigation-stack": "^2.10.4",
