--- a/GRP_Kiosk/package.json
+++ b/GRP_Kiosk/package.json
@@ -17,6 +17,7 @@
     "immutability-helper": "^3.1.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-ble-advertiser": "^0.0.17",
     "react-native-uuid-generator": "^6.1.1",
     "realm": "^12.3.0",
     "sockjs": "^0.3.24",
